fixed navigation bar and footer, removed excess white space

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,15 +6,20 @@
 }
 
 @media screen and (min-width: 480px) {
+  html, body {
+    margin: 0;
+    padding: 0;
+  }
+
   #outer_container {
     position: relative;
     margin: 0 auto;
-    width: 480px;
+    width: 100%;
     background-image: url('../assets/bg.jpg');
   
     #header {
       height: 65px;
-      width: 480px;
+      width: 100%;
       background-color: white;
       position: fixed;
       top: 0;
@@ -34,6 +39,8 @@
       top: 65px;
       z-index: 1;
       background-color: #3A3A3C;
+      width: 100%;
+      line-height: 2.6;
 
       ul {
         list-style-type: none;
@@ -44,12 +51,12 @@
         text-align: center;
   
         li {
-          float: left;      
+          float: left;
+          width: 25%;      
   
           span {
             display: block;
             color: #818285;
-            width: 118px;
             height: 45px;
             font-size: 1em;
             font-family: 'Oswald';
@@ -74,6 +81,8 @@
           background-color: white;
           overflow: hidden;
           cursor: pointer;
+          opacity: 0;
+          transition: opacity 0.4s ease-in;
     
           .thumbnail {
             position: relative;
@@ -136,27 +145,26 @@
 
 @media screen and (min-width: 770px) {
   #outer_container {
-    width: 770px;
-
     #header {
-      width: 770px;
+      #header_image_container {
+        width: 500px;
+        margin: 0 auto;
 
-      #header_logo {
-        position: relative;
-        left: 320px;
-      }
-
-      #header_bg {
-        display: block;
-        position: relative;
-        top: -40px;
-        left: 180px;
+        #header_logo {
+          position: relative;
+          left: 190px;
+        }
+  
+        #header_bg {
+          display: block;
+          position: relative;
+          top: -40px;
+          left: 45px;
+        }
       }
     }
 
     #navigation_bar {
-      width: 770px;
-
       ul {
         margin: 0 auto;
         padding-top: 10px;
@@ -211,23 +219,7 @@
 
 @media screen and (min-width: 1200px) {
   #outer_container {
-    width: 1200px;
-
-    #header {
-      width: 1200px;
-
-      #header_logo {
-        left: 535px;
-      }
-
-      #header_bg {
-        left: 395px;
-      }
-    }
-
     #navigation_bar {
-      width: 1200px;
-
       span:hover {
         color: #F1592A;
       }
@@ -251,12 +243,12 @@
     #footer {
       display: block;
       height: 50px;
-      width: 1200px;
+      width: 100%;
       background-color: #3A3A3C;
       position: fixed;
       z-index: 1;
       bottom: 0%;      
-
+  
       #logo_container {
         position: relative;
         width: 120px;
